--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,11 @@
             </fieldset>
           </div>
         {{ end }}
+
+        <form action="/session" method="DELETE">
+          <input type="submit" value="Log out"></input>
+        </form>
       </div>
     </div>
-
-    <div id="lights"></div>
   </body>
 </html>
