--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
   <head>
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="/js/ext/jquery.mobile-1.4.3.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <script src="/js/ext/jquery-1.11.1.js"></script>
   <script src="/js/ext/jquery.mobile-1.4.3.js"></script>
   <script src="/js/ext/underscore.js"></script>
@@ -39,35 +40,59 @@
   <body>
     <div data-role="page">
       <div data-role="main" class="ui-content">
-        <div data-role="fieldcontain">
-          <label for="volume">Volume</label>
-          <input type="range" min="0" max="100" value="{{ .Volume }}" id="volume"></input>
+
+        <div class="ui-corner-all custom-corners">
+          <div class="ui-bar ui-bar-a">
+            <h3>White Noise</h3>
+          </div>
+          <div class="ui-body ui-body-a">
+            <div data-role="fieldcontain">
+              <label for="volume">Volume</label>
+              <input type="range" min="0" max="100" value="{{ .Volume }}" id="volume"></input>
+            </div>
+          </div>
         </div>
 
-        {{ range $id, $light := .Lights }}
-          <div id="light-{{ $id }}">
-            <fieldset>
-            <label>
-              <input type="checkbox" id="on" {{ if $light.State.On }} checked {{ end }}>{{ $light.Name }}
-            </label>
-
-            <div data-role="fieldcontain">
-              <label for="hue">Hue</label>
-              <input type="range" min="0" max="65535" value="{{ $light.State.Hue }}" id="hue"></input>
-            </div>
-            
-            <div data-role="fieldcontain">
-              <label for="sat">Sat</label>
-              <input type="range" min="0" max="255" value="{{ $light.State.Sat }}" id="sat"></input>
-            </div>
-            
-            <div data-role="fieldcontain">
-              <label for="bri">Bri</label>
-              <input type="range" min="0" max="255" value="{{ $light.State.Bri }}" id="bri"></input>
-            </div>
-            </fieldset>
+        <div class="ui-corner-all custom-corners">
+          <div class="ui-bar ui-bar-a">
+            <h3>Lights</h3>
           </div>
-        {{ end }}
+          <div class="ui-body ui-body-a">
+            {{ range $id, $light := .Lights }}
+              <div id="light-{{ $id }}">
+                <fieldset>
+                <label>
+                  <input type="checkbox" id="on" {{ if $light.State.On }} checked {{ end }}>{{ $light.Name }}
+                </label>
+    
+                <div data-role="fieldcontain">
+                  <label for="hue">Hue</label>
+                  <input type="range" min="0" max="65535" value="{{ $light.State.Hue }}" id="hue"></input>
+                </div>
+                
+                <div data-role="fieldcontain">
+                  <label for="sat">Sat</label>
+                  <input type="range" min="0" max="255" value="{{ $light.State.Sat }}" id="sat"></input>
+                </div>
+                
+                <div data-role="fieldcontain">
+                  <label for="bri">Bri</label>
+                  <input type="range" min="0" max="255" value="{{ $light.State.Bri }}" id="bri"></input>
+                </div>
+                </fieldset>
+              </div>
+            {{ end }}
+          </div>
+        </div>
+
+        <div class="ui-corner-all custom-corners">
+          <div class="ui-bar ui-bar-a">
+            <h3>Audio</h3>
+          </div>
+          <div class="ui-body ui-body-a">
+            <a href="/stream">Live Stream</a>
+          </div>
+        </div>
 
         <form action="/session" method="DELETE">
           <input type="submit" value="Log out"></input>
